ML direction model work

--- a/NWBDataExample.ipynb
+++ b/NWBDataExample.ipynb
@@ -2,23 +2,87 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "aa59f05c-d451-41c1-b703-f10ea1b63399",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/felsenlab/GitHub/simply-nwb/simply_nwb/pipeline/enrichments/saccades/putative.py:64: SyntaxWarning: invalid escape sequence '\\*'\n",
+      "  \"\"\"\n",
+      "Warning: Ignoring XDG_SESSION_TYPE=wayland on Gnome. Use QT_QPA_PLATFORM=wayland to run on Wayland anyway.\n"
+     ]
+    }
+   ],
+   "source": [
+    "from simply_nwb.pipeline import NWBSession\n",
+    "import matplotlib.pyplot as plt\n",
+    "%matplotlib qt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "c1e82069-7a53-4fd5-9236-3f87d51cbcc2",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from simply_nwb.pipeline import NWBSession\n",
-    "import matplotlib.pyplot as plt"
+    "sess = NWBSession(\"predicted.nwb\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "c1e82069-7a53-4fd5-9236-3f87d51cbcc2",
+   "id": "5924911a-4d22-4126-b18c-3fc586b3776c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Eyepos (571860,)\n",
+      "Nasal (251,)\n",
+      "Temporal (623,)\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "eyepos = sess.pull(\"PutativeSaccades.pose_reoriented\")[:, 0]  # corrected, interpolated, reoriented and filtered\n",
+    "# eyepos = sess.pull(\"PutativeSaccades.raw_x\")  # Raw unprocessed DLC (might not be the same length, confirm with above value shape)\n",
+    "nasal_peaks = sess.pull(\"PredictSaccades.saccades_predicted_nasal_peak_indices\")\n",
+    "temporal_peaks = sess.pull(\"PredictSaccades.saccades_predicted_temporal_peak_indices\")\n",
+    "\n",
+    "print(f\"Eyepos {eyepos.shape}\")\n",
+    "print(f\"Nasal {nasal_peaks.shape}\")\n",
+    "print(f\"Temporal {temporal_peaks.shape}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4ccad968-2d97-44ed-be97-d8badfffa9f5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "c662567f-9a30-458e-94fb-5a453ded89a7",
    "metadata": {},
    "outputs": [],
    "source": [
-    "sess = NWBSession(\"C:\\\\Users\\\\spenc\\\\Downloads\\\\tmp\\\\predictive-20240325_unitME_session001-nwb-4-24_13-30-13_putative.nwb\")"
+    "# Plot the eye position with the\n",
+    "fig, axs = plt.subplots(nrows=2, sharex=True)\n",
+    "axs[0].plot(eyepos)\n",
+    "for nas in nasal_peaks:\n",
+    "    axs[1].vlines(nas, -20, 15, color=\"blue\")\n",
+    "for tmp in temporal_peaks:\n",
+    "    axs[1].vlines(tmp, -20, 15, color=\"orange\")\n",
+    "plt.show()\n"
    ]
   },
   {
@@ -210,7 +274,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.10"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
