--- a/NWBDataExample.ipynb
+++ b/NWBDataExample.ipynb
@@ -33,6 +33,133 @@
   {
    "cell_type": "code",
    "execution_count": 3,
+   "id": "c77c1ce7-ef2b-4b5f-91ed-321b584a8f99",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['PredictSaccades', 'PutativeSaccades']"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sess.available_enrichments()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "5ebeb074-dcab-4e3d-8c60-1042a8a5a206",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['saccades_fps',\n",
+       " 'saccades_predicted_nasal_epochs',\n",
+       " 'saccades_predicted_nasal_peak_indices',\n",
+       " 'saccades_predicted_nasal_waveforms',\n",
+       " 'saccades_predicted_noise_waveforms',\n",
+       " 'saccades_predicted_temporal_epochs',\n",
+       " 'saccades_predicted_temporal_peak_indices',\n",
+       " 'saccades_predicted_temporal_waveforms']"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sess.available_keys(\"PredictSaccades\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "5d5df84a-5384-43c5-8069-e1bfebb0d4ed",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'raw_x': 'x values directly from the DLC csv (time,)',\n",
+       " 'raw_y': 'y values directly from the DLC csv (time,)',\n",
+       " 'raw_timestamps': 'timestamps directly from the timestamps.txt (time,)',\n",
+       " 'raw_likelihoods': 'likelihoods directly from the DLC csv (time,)',\n",
+       " 'pose_corrected': 'Corrected eye position (time, x/y)',\n",
+       " 'pose_interpolated': 'Interpolated eye position (time, x/y)',\n",
+       " 'pose_decomposed': 'PCA Imputed eye positions (time, x/y)',\n",
+       " 'pose_missing': 'Indexes of missing (nan) position values (time, x/y)',\n",
+       " 'pose_reoriented': 'Reoriented positions, so they all start from the same 0 (time, x/y)',\n",
+       " 'processed_eyepos': 'Final interpolation and nan filtering of eye position pose_reoriented (time, x/y)',\n",
+       " 'saccades_putative_peak_indices': 'Index into time of the center (peak velocity) of the saccade (saccadenum,)',\n",
+       " 'saccades_putative_waveforms': 'Waveforms of putative saccades (saccadenum, time, x/y)',\n",
+       " 'saccades_fps': 'single value list like [fps] with the fps used to calculate eye positions'}"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sess.description(\"PutativeSaccades\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "10fbcc59-16eb-4728-a4cb-f6edb9dc9069",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Function 'dropped_frames'\n",
+      "\tArgs:\n",
+      "\t\t{}\n",
+      "\tDesc:\n",
+      "\t\tNumber of dropped frames (int)\n",
+      "\tExample:\n",
+      "\t\tdropped_frames()\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(sess.get_funclist(\"PutativeSaccades\")[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "6be46c7c-5c59-4848-8520-40410c3836df",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sess.func(\"PutativeSaccades.dropped_frames\")(\"rightCamTimestamps\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "id": "5924911a-4d22-4126-b18c-3fc586b3776c",
    "metadata": {},
    "outputs": [
